<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_teleop</name>
  <version>2.2.5</version>
  <description>Teleoperation node using keyboard for TurtleBot3.</description>
  <maintainer email="leon@robotis.com">Pyo</maintainer>
  <maintainer email="yun@robotis.com">Yun</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>eigen</depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 